# AmazonLinux2Server

./: .gitignore  Dockerfile  Dockerfile.beta  Dockerfile.cloud  Dockerfile.local.template  Dockerfile.podgorica  Makefile  README.md  alembic.ini  bitbucket-pipelines.yml  cli.py  entrypoint.sh  pyproject.toml  pytest.ini  server.requirements.txt  test.requirements.txt
docs/: conf.py  index.rst
scripts/: keys.py
server/: .env.template  dependencies.py  main.py
server/api/v1/: auth.py  base.py  brands.py  dayparts.py  insights.py  reports.py  status.py  tags.py  users.py
server/cli/commands/: amazon.py  brand.py  cache.py  data.py  database.py  insight.py  report.py  status.py  tag.py  user.py
server/core/: constants.py  settings.py
server/decorators/: cache_decorator.py  singleton_decorator.py
server/delegates/: aa_delegate.py
server/managers/: brand_manager.py
server/middleware/: aa_middleware.py
server/overrides/: dict_override.py
server/services/: auth_service.py  aws_service.py  data_service.py  insight_service.py  redis_service.py  twilio_service.py  user_service.py
server/utilities/: aa_utility.py  auth_utility.py  brand_utility.py  cache_utility.py  data_utility.py  date_utility.py  list_utility.py  token_utility.py
tests/: conftest.py  test_constants.py
tests/fixtures/: users.csv
tests/integration/: test_account_api.py  test_amazon_api.py  test_auth_api.py  test_brand_api.py  test_dayparts_api.py  test_insights_api.py  test_reports_api.py  test_tags_api.py
tests/mocks/: interface_mock.py
tests/utilities/: rds_utility.py
(+77 files in other folders)
